--- a/covid19-api/build.gradle
+++ b/covid19-api/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 
+    implementation 'org.knowm.xchart:xchart:3.6.2'
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation "com.winterbe:expekt:0.5.0"
 }
